# SupraSonic

./: .gitignore  README.md  README_WINDOWS.md  SupraSonic.sln  TROUBLESHOOTING.md  build-app.sh  build-full-app.sh  build-win.bat  convert-icon.sh  create-dmg.sh  start.sh
.agent/workflows/: build_and_launch.md
SupraSonicWin/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OverlayWindow.xaml  OverlayWindow.xaml.cs  SetupWindow.xaml  SetupWindow.xaml.cs  SupraSonicWin.csproj  app.manifest
SupraSonicWin/Helpers/: HotkeyManager.cs  KeystrokeManager.cs  L10n.cs  LLMManager.cs  LaunchManager.cs  LocalLLMWorker.cs  NotificationCenter.cs  TranscriptionManager.cs  TrayManager.cs  VolumeHelper.cs
SupraSonicWin/Models/: HistoryManager.cs  ModelManager.cs  SettingsManager.cs
SupraSonicWin/Native/: RustBindings.cs  RustCore.cs
SupraSonicWin/Pages/: HistoryPage.xaml  HistoryPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
SuprasonicApp/: Info.plist  Package.swift  SuprasonicApp.entitlements  build_output.txt
SuprasonicApp/Sources/: AppDelegate.swift  AudioConverter.swift  AudioDeviceManager.swift  CompanyManager.swift  CompanyMember.swift  Constants.swift  EnrollmentRecordingView.swift  KeystrokeManager.swift  LLMManager.swift  Localization.swift  Meeting.swift  MeetingDetailWindow.swift  MeetingHistoryManager.swift  MeetingManager.swift  ModelManager.swift  OverlayWindow.swift  PermissionsManager.swift  (+6 more)
bindings/: suprasonic_core.swift  suprasonic_coreFFI.h
core/: Cargo.toml  build.rs
core/src/: audio.rs  diarization.rs  lib.rs  state.rs
(+10 files in other folders)
